--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node nithya-bot.js"
   },
   "dependencies": {
-    "botkit": "^0.6.11"
+    "botkit": "^0.6.11",
+    "mongodb": "^3.0.4"
   }
 }
